<resources>
    <string name="app_name">TrainningApp</string>
    <string name="nome">Name</string>
    <string name="idade">Age</string>
    <string name="data_nascimento">Date of Birth</string>
    <string name="altura">Height</string>
    <string name="peso">Weight</string>
    <string name="sexo">Gender</string>
    <string name="masculino">Male</string>
    <string name="feminino">Female</string>
    <string name="tipo_fisico">Body Type</string>
    <string name="endomorfo">Endomorph</string>
    <string name="mesomorfo">Mesomorph</string>
    <string name="ecotomorfo">Ectomorph</string>
    <string name="objetivos">Goals</string>
    <string name="saude">Health</string>
    <string name="perda_de_peso">Weight Loss</string>
    <string name="ganho_massa_muscular">Muscle Gain</string>
    <string name="ganho_de_forca">Strength Gain</string>
    <string name="ganho_de_explosao">Explosive Power Gain</string>
    <string name="select_date">Select Date:</string>
    <string name="salvar">Save</string>
    <string name="limpar">Clear</string>
    <string name="campos_cadastro_foram_limpos">Fields have been cleared!</string>
    <string name="pelo_menos_um_objetivo_selecionado">At least one goal selected</string>
    <string name="os_campos_precisam_ser_preenchidos">The following fields need to be filled: </string>
    <string name="cadastro_efetuado_com_sucesso">Registration successful!</string>

    <string name="abdominal">Abdominal</string>
    <string name="agachamento_bulgaro">Bulgarian Split Squat</string>
    <string name="cadeira_extensora">Leg Extension</string>
    <string name="cadeira_flexora">Leg Curl</string>
    <string name="crossover">Crossover</string>
    <string name="crucifixo_halter">Dumbbell Fly</string>
    <string name="desenvolvimento_halter">Dumbbell Shoulder Press</string>
    <string name="elevacao_frontal_barra">Barbell Front Raise</string>
    <string name="elevacao_lateral_cabo">Cable Lateral Raise</string>
    <string name="levantamento_terra">Deadlift</string>
    <string name="panturrilha_maquina">Calf Raise Machine</string>
    <string name="panturrilha_sentado">Seated Calf Raise</string>
    <string name="puxada">Pull-down</string>
    <string name="remada_cabo">Cable Row</string>
    <string name="remada_halter">Dumbbell Row</string>
    <string name="remada_livre">Barbell Row</string>
    <string name="rosca_concentrada">Concentration Curl</string>
    <string name="rosca_martelo">Hammer Curl</string>
    <string name="rosca_scot_barra_reta">Barbell Scott Curl</string>
    <string name="supino_barra">Barbell Bench Press</string>
    <string name="triceps_corda">Cable Triceps Pushdown</string>
    <string name="triceps_frances_halter">Triceps French Halter</string>
    <string name="triceps_maquina">Triceps Machine</string>
    <string name="triceps_testa_halter">Triceps Head Halter</string>
    <string name="o_exercicio">"The exercise "</string>
    <string name="foi_clicado">" was clicked!"</string>
    <string name="autoria_app">App Authorship</string>
    <string name="autor">Author</string>
    <string name="rodrigo_henrique_zaninelli" translatable="false">Rodrigo Henrique Zaninelli</string>
    <string name="curso">Course</string>
    <string name="pos_graduacao_java">Postgraduate in Java</string>
    <string name="email">Email</string>
    <string name="rodrigo_email" translatable="false">rhzaninelli@gmail.com</string>
    <string name="sobre_app">About the App</string>
    <string name="sobre_training_app">Personal Training Control App</string>
    <string name="nome_treino">Training Name</string>
    <string name="dias_semana">Days of the Week</string>

    <string name="segunda_feira">Monday</string>
    <string name="terca_feira">Tuesday</string>
    <string name="quarta_feira">Wednesday</string>
    <string name="quinta_feira">Thursday</string>
    <string name="sexta_feira">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sunday</string>
    <string name="exercicios">Exercises</string>
    <string name="add">ADD</string>
    <string name="repeticoes">Repetitions</string>
    <string name="forca">Strength</string>
    <string name="hipertrofia">Hypertrophy</string>
    <string name="resistencia">Endurance</string>
    <string name="objetivo">Objective</string>
    <string name="cancelar">Cancel</string>
    <string name="novo">New</string>
    <string name="sobre">About</string>
    <string name="pelo_menos_um_dia_semana_selecionado">At least one day of the week must be selected!</string>
    <string name="adicionar">Add</string>
    <string name="cadastro_de_treino">Training Registration</string>
    <string name="criar_novo_treino">Create New Training</string>
    <string name="alterar_treino">Edit Training</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="Curso">course</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="remover">Remove</string>
    <string name="grupo_muscular_principal">Muscular Group</string>
    <string name="aviso">warning</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">NO</string>
    <string name="confirma_delete">You really want to delete?</string>
</resources>